<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/lbl_start_date" />

        <TextView
            android:id="@+id/startDateText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#DDD"
            android:padding="12dp"
            android:text="@string/hint_start_date"
            android:textColor="#212121" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/lbl_end_date" />

        <TextView
            android:id="@+id/endDateText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#DDD"
            android:padding="12dp"
            android:text="@string/hint_end_date"
            android:textColor="#212121"/>

        <Button
            android:id="@+id/filterButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="20dp"
            android:text="@string/lbl_filter" />

        <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:stretchColumns="*" />

    </LinearLayout>
</ScrollView>
